# ai_content

./: Cargo.toml  README.md  config.toml  symlink_to_bin
src/: app.rs  config.rs  entry.rs  filesystem.rs  main.rs  text_generator.rs  ui.rs  utils.rs  walker.rs
src/ui/: mod.rs  panels.rs  tree_renderer.rs
