[package]
name = "ai_content"
version = "0.2.0"
edition = "2021"

[dependencies]
eframe = "0.16"
walkdir = "2.3.0"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
copypasta = "0.8.1"
sha2 = "0.9"
once_cell = "1.19.0"
toml = "0.8.13"
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.10"

[package.metadata.scripts]
post-build = ["./post_build.sh"]
